# Photothermal-Exotherm-Conversion-Boundary-Model

./: .gitignore  README.md  fem_heat_reaction.py  implicit-explicit.md  next-steps.md  package.json  proposed-improvements.md  speed-optimization.md  test_progress_bar.py  test_validation.py  validation_output.txt
fem_heat_reaction_rust/: Cargo.toml  README.md  cargo-vis.py  output_final.csv
fem_heat_reaction_rust/output/: alpha_0000.csv  alpha_0001.csv  alpha_0002.csv  alpha_0003.csv  alpha_0004.csv  alpha_0005.csv  alpha_0006.csv  alpha_0007.csv  alpha_0008.csv  alpha_0009.csv  alpha_0010.csv  alpha_0011.csv  alpha_0012.csv  alpha_0013.csv  alpha_0014.csv  alpha_0015.csv  alpha_0016.csv  alpha_0017.csv  alpha_0018.csv  alpha_0019.csv  alpha_0020.csv  alpha_0021.csv  alpha_0022.csv  alpha_0023.csv  alpha_0024.csv  alpha_0025.csv  alpha_0026.csv  alpha_0027.csv  alpha_0028.csv  alpha_0029.csv  alpha_0030.csv  alpha_0031.csv  alpha_0032.csv  alpha_0033.csv  alpha_0034.csv  alpha_0035.csv  alpha_0036.csv  alpha_0037.csv  alpha_0038.csv  alpha_0039.csv  (+568 more)
fem_heat_reaction_rust/src/: lib.rs  main.rs  mesh.rs  physics.rs
markdown/: implicit-explicit.md  python-backend.md
tauri-app/: package-lock.json  package.json
tauri-app/src/: index.css  index.html  main.js  renderer.js
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: main.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
