[package]
name = "fem-heat-reaction-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
base64 = "0.22"
fem_heat_reaction = { path = "../../fem_heat_reaction_rust" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
